# Proyecto-Final

./: CMakeLists.txt  Carnivoro.cpp  Carnivoro.h  Criature.cpp  Criature.h  Herbivoro.cpp  Herbivoro.h  Mundo.cpp  Mundo.h  Nodo.cpp  Nodo.h  README.md  Serializador.cpp  Serializador.h  UML.md  autoevaluacion.md  estado_mundo.json  main.cpp
